modules/gdscript/tests/scripts/analyzer/errors/enum_global_access.gd
func test():
	print(Variant.Operator)
